--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+git add .
+git commit -m "段落を追加"
+git checkout main
+git merge add-index-page
+git push origin main
 <!DOCTYPE html>
 <html lang="ja">
   <head>
