段落を追加

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-git add .
-git commit -m "段落を追加"
-git checkout main
-git merge add-index-page
-git push origin main
+
+
+
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -11,5 +9,6 @@ git push origin main
   </head>
   <body>
     <h1>Gitのブランチを勉強しています。</h1>
+    <p>この変更はadd-index-pageブランチで追加されました。</p>
   </body>
 </html>
